# ww

my_rest/: CMakeLists.txt  package.xml
my_rest/launch/: rest_world.launch.py
my_rest/worlds/: res.world
my_robot/: CMakeLists.txt  model.config  package.xml
my_robot/config/: controllers.yaml  joint_names_my_robot.yaml
my_robot/launch/: gazebo.launch.py  robot.py
my_robot/meshes/: base_link.STL  c1_l.STL  c2_l.STL  c3_l.STL  c4_l.STL  lidar_l.STL  lw.STL  rw.STL
my_robot/src/: diff_drive_publisher.cpp
my_robot/urdf/: my_robot.csv  my_robot.urdf
robot_motion/: CMakeLists.txt  package.xml
robot_motion/config/: mapper_params.yaml  nav2_params.yaml
robot_motion/launch/: mation.py  nav2_launch.py  slam_launch.py
robot_motion/src/: auto_explorer.py  robot_motion_node.cpp  service.cpp
ros_cpp/: CMakeLists.txt  package.xml
ros_cpp/src/: publisher.cpp  subscriber.cpp
